:hankey:Need to be improved.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <canvas id="myCanvas" width="285" height="267" style="border:1px solid #d3d3d3;">你的垃圾浏览器无法正确处理canvas元素</canvas>
     <img id="myImage" src="./bg.jpg" width="0" height="0" crossOrigin="anonymous">
     <br>
-    <button type=button value=UPDATE id=test></button>
+    <button type="button" id="test">AUTOMATIC</button>
     <br>
 
     <a target="_blank" href="http://www.mcbbs.net/home.php?mod=task&do=apply&id=10">每日红包</a>
