:sparkles:May finish automatic uploading.

--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <title>AutoSigner</title>
 
 <body>
-    <canvas id="myCanvas" width="285" height="267" style="border:1px solid #d3d3d3;">你的垃圾浏览器无法正确处理canvas元素</canvas>
-    <img id="myImage" src="./bg.jpg" width="0" height="0" crossOrigin="anonymous">
+    <img id="myImage" src="./bg.jpg" width="285" height="267" crossOrigin="anonymous">
+    <canvas id="myCanvas" width="285" height="267" style="border:1px solid #d3d3d3;"></canvas>
     <br>
-    <button type="button" id="test">AUTOMATIC</button>
     <br>
+    <button type="button" id="do">AUTOMATIC</button>
+    <br>
+    <p id="log">WAITING...</p>
 
     <a target="_blank" href="http://www.mcbbs.net/home.php?mod=task&do=apply&id=10">每日红包</a>
     <br>
@@ -14,8 +16,6 @@
     <br>
     <a target="_blank" href="http://www.mcbbs.net/thread-69533-1-1.html">打开帖子</a>
     <br>
-    <a id="post" href="#">上传图片</a>
-    <p id="result">Hello</p>
     <a target="_blank" href="http://www.mcbbs.net/home.php?mod=task&do=draw&id=24">领取奖励</a>
     <br>
     <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
