:lipstick:Fix a lot.

--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
     <canvas id="myCanvas" width="285" height="267" style="border:1px solid #d3d3d3;"></canvas>
     <br>
     <br>
-    <button type="button" id="do">AUTOMATIC</button>
+    <button type="button" id="do">UPLOAD</button> <input type="text" id="time"/>
     <br>
     <p id="log">WAITING...</p>
 
-    <a target="_blank" href="http://www.mcbbs.net/home.php?mod=task&do=apply&id=10">每日红包</a>
+    <a href="http://www.mcbbs.net/home.php?mod=task&do=apply&id=39">每日活跃·一</a>
     <br>
-    <a target="_blank" href="http://www.mcbbs.net/home.php?mod=task&do=apply&id=24">申请任务</a>
+    <a href="http://www.mcbbs.net/home.php?mod=task&do=apply&id=22">每日活跃·二</a>
     <br>
-    <a target="_blank" href="http://www.mcbbs.net/thread-69533-1-1.html">打开帖子</a>
+    <a target="_blank" href="http://www.mcbbs.net/home.php?mod=task&do=apply&id=24">每日签到</a>
+    <br>
+    <a target="_blank" href="http://www.mcbbs.net/thread-69533-1-1.html">打开图楼</a>
     <br>
     <a target="_blank" href="http://www.mcbbs.net/home.php?mod=task&do=draw&id=24">领取奖励</a>
     <br>
